styles/style.css
header {
	border: 5px solid red;
	background-color: lightgrey;
	text-align: center;
	height: 128px
}
/*css for logo button that takes you back to main page*/

.logo{
	border: 1px solid black;
	float: left;
}

/* css used for buttons on home page */
.headerButtons button{
	color: white;
	border: none;
	background-color: rgb(79, 79, 79);
	text-align: center;
	text-decoration: none;
	padding: 15px 32px;
	float: left;
}

.headerButtons button:hover{
	color: grey;
	background-color: rgb(0,0,0);
}

/* css used for projects page */

.projectSelectButtons{
	border: none;
	text-align: center;
	display: grid;
	grid-gap: 5px;
	grid-template-columns: repeat(2, 50%)
}

.projectSelectButtons a:hover{
	border-color: black;
}


body{
	background-color: rgb(127, 144, 144, 0.7);
}

* {
	font-family: Monospace;
}

